Fixed text and button layout on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -960,8 +960,8 @@ strong {
   }
   .bnt {
     height: 2.1rem;
-    width: 4.1rem;
-    font-size: 0.85rem;
+    width: 4.15rem;
+    font-size: 0.75rem;
   }
   .bnt:hover {
     height: 1.9rem;
